--- a/machine-learning/project/latex/report/references.bib
+++ b/machine-learning/project/latex/report/references.bib
@@ -144,3 +144,21 @@
     journal = {J. Molecular Biology},
     year = {1988}
 }
+
+@misc{jojic12,
+    author = {Vladimir Jojic},
+    title = {ADMM Fused Lasso Signal Approximator},
+    howpublished ="\url{http://www.cs.unc.edu/~vjojic/comp790/notes/ADMMFLSA.pdf}",
+    year = {2012},
+    note ={Online},
+}
+
+@misc{burke12,
+    author = {James Burke},
+    title = {Line Search methods},
+    howpublished ="\url{http://www.math.washington.edu/~burke/crs/408/notes/nlp/line.pdf}",
+    year = {2012},
+    note ={Online},
+}
+
+
