--- a/machine-learning/project/latex/report/final_report.tex
+++ b/machine-learning/project/latex/report/final_report.tex
@@ -203,6 +203,7 @@
 % custom packages
 \usepackage{verbatim}
 \usepackage{multirow}
+\usepackage{hhline}
 
 % start document
 \begin{document}
@@ -509,54 +510,65 @@ Table \ref{tab:resultTable} specifies the precision, recall, f1-score and accura
 \centering
 \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline
-\multirow{2}{*}{MHC Class-II} & \multicolumn{3}{c|}{Precision} & \multicolumn{3}{c|}{Recall} & \multicolumn{3}{c|}{F1 Score} & \multicolumn{3}{c|}{Accuracy}\\ [1pt]
+\multirow{2}{*}{MHC Class-II} & \multicolumn{3}{c|}{Precision} & \multicolumn{3}{c|}{Recall} & \multicolumn{3}{c|}{F1 Score} & \multicolumn{3}{c|}{Accuracy}\\ [2pt]
 \cline{2-13}
 Allele Pair & ADMM & SVM & GLM & ADMM & SVM & GLM & ADMM & SVM & GLM & ADMM & SVM & GLM \\ 
 \hline
 
-\multirow{1}{*}{DRB1-0301} & 0.71 & 0.71 & 0.68 & 0.92 & 0.91 & 0.86 & 0.80 & 0.80 & 0.76 & 0.70 & 0.70 & 0.62\\
+%done
+\multirow{1}{*}{DRB1-0301} & \bf 0.71 & \bf 0.71 & 0.68 & \bf 0.90 & 0.89 & 0.86 & \bf 0.80 & \bf 0.80 & 0.76 & \bf 0.70 & \bf 0.70 & 0.62\\
 \cline{2-13}
-DRB1-0401 & 0.73 & 0.73 & 0.72 & 0.91 & 0.92 & 0.91 & 0.81 & 0.82 & 0.81 & 0.71 & 0.72 & 0.68\\
-\hline
+DRB1-0401 & \bf 0.73 & \bf 0.73 & 0.72 & 0.90 & \bf 0.91 & 0.89 & 0.80 & \bf 0.81 & 0.80 & 0.71 & \bf 0.72 & 0.68\\
+%\hline
+\hhline{=============}
 
-\multirow{1}{*}{DRB1-0301} & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+%done
+\multirow{1}{*}{DRB1-0401} & \bf 0.73 & \bf 0.73 & 0.72 & \bf 0.92 & \bf 0.92 & 0.91 & \bf 0.82 & 0.81 & 0.81 & \bf 0.72 & \bf 0.72 & 0.68\\
 \cline{2-13}
-DRB1-0401 & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
-\hline
+DRB1-0404  & \bf 0.77 & 0.75 & 0.76 & \bf 0.92 & 0.90 & 0.90 & \bf 0.84 & 0.82 & 0.83 & \bf 0.76 & 0.74 & 0.73\\
+%\hline
+\hhline{=============}
 
-\multirow{1}{*}{DRB1-0301} & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+%done
+\multirow{1}{*}{DRB1-0401} & \bf 0.73 & \bf 0.73 & 0.72 & \bf 0.92 & \bf 0.92 & 0.91 & \bf 0.82 & 0.81 & 0.81 & \bf 0.72 & \bf 0.72 & 0.68\\
 \cline{2-13}
-DRB1-0401 & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
-\hline
+DRB1-0405 & \bf 0.83 & \bf 0.83 & \bf 0.83 & \bf 0.92 & \bf 0.92 & 0.86 & \bf 0.87 & \bf 0.87 & 0.84 & \bf 0.83 & \bf 0.83 & 0.79\\
+%\hline
+\hhline{=============}
 
-\multirow{1}{*}{DRB1-0301} & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+\multirow{1}{*}{DRB1-0401} & \bf 0.73 & \bf 0.73 & 0.72 & \bf 0.92 & \bf 0.92 & 0.91 & \bf 0.82 & 0.81 & 0.81 & \bf 0.72 & \bf 0.72 & 0.68\\
 \cline{2-13}
-DRB1-0401 & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
-\hline
+DRB1-0701 & 0.78 & 0.78 & \bf 0.80 & \bf 0.92 & 0.91 & \bf 0.92 & 0.84 & 0.84 & \bf 0.85 & 0.78 & 0.78 & \bf 0.79\\
+%\hline
+\hhline{=============}
 
-\multirow{1}{*}{DRB1-0301} & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+\multirow{1}{*}{DRB1-0401} & \bf 0.73 & \bf 0.73 & 0.72 & \bf 0.92 & \bf 0.92 & 0.91 & \bf 0.82 & 0.81 & 0.81 & \bf 0.72 & \bf 0.72 & 0.68\\
 \cline{2-13}
-DRB1-0401 & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
-\hline
+DRB1-0901 & \bf 0.72 & 0.71 & \bf 0.72 & 0.90 & \bf 0.92 & 0.85 & \bf 0.80 & \bf 0.80 & 0.78 & \bf 0.71 & \bf 0.71 & 0.67 \\
+%\hline
+\hhline{=============}
 
-\multirow{1}{*}{DRB1-0301} & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+\multirow{1}{*}{DRB1-0404}  & \bf 0.77 & 0.75 & 0.76 & \bf 0.92 & 0.90 & 0.90 & \bf 0.84 & 0.82 & 0.83 & \bf 0.76 & 0.74 & 0.73\\
 \cline{2-13}
-DRB1-0401 & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
-\hline
+DRB1-0405 & \bf 0.83 & \bf 0.83 & \bf 0.83 & \bf 0.92 & \bf 0.92 & 0.86 & \bf 0.87 & \bf 0.87 & 0.84 & \bf 0.83 & \bf 0.83 & 0.79\\
+%\hline
+\hhline{=============}
 
-\multirow{1}{*}{DRB1-0301} & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+\multirow{1}{*}{DRB1-0701} & 0.79 & 0.78 & \bf 0.80 & 0.91 & \bf 0.92 & \bf 0.92 & 0.84 & 0.84 & \bf 0.85 & 0.78 & 0.78 & \bf0.79\\
 \cline{2-13}
-DRB1-0401 & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
-\hline
+DRB1-0901 & \bf 0.73 & 0.71 & 0.72 & 0.90 & \bf 0.92 & 0.85 & \bf 0.80 & \bf 0.80 & 0.78 & \bf 0.72 & 0.71 & 0.67\\
+%\hline
+\hhline{=============}
 
-\multirow{1}{*}{DRB1-0301} & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+\multirow{1}{*}{DRB1-0401} & \bf 0.73 & \bf 0.73 & 0.72 & \bf 0.92 & \bf 0.92 & 0.91 & \bf 0.82 & 0.81 & 0.81 & \bf 0.72 & \bf 0.72 & 0.68\\
 \cline{2-13}
-DRB1-0401 & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
-\hline
+DRB1-1501 & \bf 0.72 & 0.70 & 0.71 & \bf 0.92 & \bf 0.92 & 0.89 & \bf 0.80 & 0.79 & 0.79 & \bf 0.72 & 0.70 & 0.67\\
+%\hline
+\hhline{=============}
 
-\multirow{1}{*}{DRB1-0301} & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+\multirow{1}{*}{DRB1-1101} & \bf 0.79 & 0.78 & 0.78 & \bf 0.92 & 0.91 & 0.90 & \bf 0.85 & 0.84 & 0.84 & \bf 0.80 & 0.78 & 0.77\\
 \cline{2-13}
-DRB1-0401 & Prec & Prec & Prec & Recall & Recall & Recall & F1 & F1 & F1 & Acc & Acc & Acc\\
+DRB1-1501 & \bf 0.72 & 0.70 & 0.71 & \bf 0.92 & \bf 0.92 & 0.89 & \bf 0.80 & 0.79 & 0.79 & \bf 0.72 & 0.70 & 0.67\\
 \hline
 \end{tabular}
 \end{table}
